# atomic-hack

./: README.md  docker-compose.yaml  nginx.conf
backend/: .dockerignore  .gitignore  .gitlab-ci.yml  1.txt  README.md  pyproject.toml
backend/docker/dev/: Dockerfile  docker-compose.yml
backend/docker/prod/: Dockerfile
backend/src/: main.py
backend/src/common/: neuro.py
backend/src/core/: app.py  orm.py  routes.py
backend/src/endpoints/: detection.py  test.py
frontend/: .gitignore  README.md  package-lock.json
frontend/src/app/: layout.tsx
frontend/src/app/(landing)/: page.tsx
frontend/src/app/test/: page.tsx
ml/: README.md  Untitled.ipynb  inference.py  svarka.yaml  train_yolo10.ipynb  train_yolo8.ipynb
