[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Malinnik <ratanov.maxim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {extras = ["speedups"], version = "^3.9.5"}
pydantic = {extras = ["email"], version = "^2.7.1"}
aiohttp-pydantic = "^2.0.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
opencv-python = "^4.10.0.82"
ultralytics = "^8.2.32"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
aiohttp-devtools = "^1.1.2"
pytest = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
